// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TriggerErrorInfo should render 1`] = `
<Infos
  icon={null}
  isImportant={true}
  text={
    <Markdown
      source="error.job.LOGIN_FAILED.description"
    />
  }
  title="error.job.LOGIN_FAILED.title"
/>
`;

exports[`TriggerErrorInfo should render regular Error 1`] = `
<Infos
  icon={null}
  isImportant={true}
  text={
    <Markdown
      source="error.job.UNKNOWN_ERROR.description (Something is undefined)"
    />
  }
  title="error.job.UNKNOWN_ERROR.title"
/>
`;
